# quiz_app

./: .gitignore  CMakeLists.txt  README.md  README_DE.md  plan.md  workflow.md
documentation/: Benutzerhandbuch.tex  Entwicklerdokumentation.tex
input/: input.txt  invalid.asd  valid.txt
input/jokes/: dad.txt  programming.txt
input/language_learn/: english.tsv  german.txt  spanish.txt
input/try_this/: a.txt
input/try_this/folder_folder/: aa.txt
source/: comm.c  comm.h  evaluation.c  evaluation.h  fs_read.c  fs_read.h  fs_utils.c  fs_utils.h  input.c  input.h  main.c  quiz.c  quiz.h
